# apripsql

./: .gitignore  CHANGELOG.md  Makefile  README.md  apripsql.cabal  check_evo_ems.py  check_evo_ems.txt  fly.toml
app/: Main.hs
csv/: abilities.csv  aliases.csv  egg-groups.csv  evolutions-raw.csv  evolutions.csv  games.csv  gender-ratios.csv  learn-methods.csv  learnsets-suppl.csv  learnsets.csv  legalities.csv  move-categories.csv  moves-raw.csv  moves.csv  natures.csv  pokemon-raw.csv  pokemon.csv  types.csv
src/: Ability.hs  Database.hs  EggGroup.hs  Evolution.hs  Game.hs  GenderRatio.hs  LearnMethod.hs  Learnset.hs  Legality.hs  Move.hs  MoveCategory.hs  Nature.hs  Pokemon.hs  Queries.hs  RawEvolution.hs  RawLearnset.hs  RawMove.hs  RawPokemon.hs  Setup.hs  SupplementaryLearnset.hs  Type.hs  Types.hs  Utils.hs  Web.hs
src/Apripsql/: Queries.hs
src/Setup/: Ability.hs  Alias.hs  Database.hs  EggGroup.hs  Evolution.hs  Game.hs  GenderRatio.hs  LearnMethod.hs  Learnset.hs  Legality.hs  Move.hs  MoveCategory.hs  Nature.hs  Pokemon.hs  RawEvolution.hs  RawLearnset.hs  RawMove.hs  RawPokemon.hs  SupplementaryLearnset.hs  Type.hs
static/: aliases.csv  dlc2_serebii.py  learnsets-dlc2.csv  legalities-raw.csv  natures-raw.csv
test/: Issues.hs  Main.hs
test/Issues/: I14.hs  I15.hs  I7.hs
