cabal-version:      2.4
name:               apripsql
version:            0.1.0.0
synopsis:           PostgreSQL database for Apribot

-- A longer description of the package.
-- description:
homepage:           https://github.com/penelopeysm/apripsql

-- A URL where users can report bugs.
-- bug-reports:
license:            MIT
license-file:       LICENSE
author:             Penelope Yong
maintainer:         penelopeysm@gmail.com
category:           Database
extra-source-files: CHANGELOG.md

common common-deps
    build-depends:
        base ^>= 4.17.1.0,
        cassava,
        containers,
        directory,
        filepath,
        mtl,
        text,
        transformers,
        unordered-containers
    default-extensions:
        OverloadedStrings,
        ScopedTypeVariables,
        LambdaCase,
        TypeApplications
    default-language:
        Haskell2010

library
    import:           common-deps
    exposed-modules:  Setup.Ability,
                      Setup.Database,
                      Setup.EggGroup,
                      Setup.Evolution,
                      Setup.Game,
                      Setup.GenderRatio,
                      Setup.LearnMethod,
                      Setup.Learnset,
                      Setup.Legality,
                      Setup.Move,
                      Setup.MoveCategory,
                      Setup.Nature,
                      Setup.Pokemon,
                      Setup.RawEvolution,
                      Setup.RawLearnset,
                      Setup.RawMove,
                      Setup.RawPokemon,
                      Setup.SupplementaryLearnset,
                      Setup.Type,
                      Utils
    build-depends:    scalpel,
                      deepseq,
                      postgresql-simple,
                      bytestring,
                      time,
                      vector
    hs-source-dirs:   src

executable apripsql
    import:           common-deps
    build-depends:    apripsql, optparse-applicative
    hs-source-dirs:   app
    main-is:          Main.hs

test-suite apripsql-test
    import:           common-deps
    build-depends:    apripsql, tasty, tasty-hunit
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    other-modules:    Issues
